Adding animation on scroll

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="./animations.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="./templateStyle.css">
     <link rel="stylesheet" href="./footer.css">
@@ -42,32 +42,32 @@
       </div>
     </nav>
     <main>
-      <section class="main__item">
-        <h1>Build The Community Your Fans Will Love</h1>
-        <p>
+      <section class="main__item hidden">
+        <h1 class="hidden">Build The Community Your Fans Will Love</h1>
+        <p class="hidden">
           Huddle re-imagines the way we build communities. You have a voice, but
           so does your audience. Create connections with your users as you
           engage in genuine discussion.
         </p>
-        <button>Get Started For Free</button>
+        <button class="hidden">Get Started For Free</button>
       </section>
-      <section class="main__item">
+      <section class="main__item hidden">
         <img src="./images/screen-mockups.svg" alt="screen-mockups" />
       </section>
-      <section class="main__item">
-        <div class="left">
+      <section class="main__item hidden">
+        <div class="left hidden">
           <img src="./images/icon-communities.svg" alt="" />
           <span>1.4k+</span>
           <p>Communities Formed</p>
         </div>
-        <div class="right">
+        <div class="right hidden">
           <img src="./images/icon-messages.svg" alt="" />
           <span>2.7m+</span>
           <p>Messages Sent</p>
         </div>
       </section>
-      <section class="main__item">
-        <div>
+      <section class="main__item hidden">
+        <div class="hidden">
           <h2>Grow Together</h2>
           <p>
             Generate meaningful discussions with your audience and build a
@@ -75,15 +75,15 @@
             miss out on with a feedback form.
           </p>
         </div>
-        <div>
+        <div class="hidden">
           <img src="./images/illustration-grow-together.svg" alt="" />
         </div>
       </section>
-      <section class="main__item">
-        <div>
+      <section class="main__item hidden">
+        <div class="hidden">
           <img src="./images/illustration-flowing-conversation.svg" alt="" />
         </div>
-        <div>
+        <div class="hidden">
           <h2>Flowing Conversations</h2>
           <p>
             You wouldn't paginate a conversation in real life, so why do it
@@ -92,8 +92,8 @@
           </p>
         </div>
       </section>
-      <section class="main__item">
-        <div>
+      <section class="main__item hidden">
+        <div class="hidden">
           <h2>Your Users</h2>
           <p>
             It takes no time at all to integrate Huddle with your app's
@@ -101,11 +101,11 @@
             your users can start chatting immediately.
           </p>
         </div>
-        <div>
+        <div class="hidden">
           <img src="./images/illustration-your-users.svg" alt="" />
         </div>
       </section>
-      <section class="main__item">
+      <section class="main__item hidden">
         <h2>Ready To Build Your Community?</h2>
         <button>Get Started For Free</button>
       </section>
@@ -143,4 +143,5 @@
       </section>
     </footer>
   </body>
+  <script src="./app.js"></script>
 </html>
